--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -15,110 +15,123 @@
     "id": "335kCek2YCWR"
    },
    "source": [
-    "scikit-fingerprints offers plenty of ways to measure similarity between molecules."
+    "scikit-fingerprints implements multiple ways to measure **similarity** or **distance** between molecules, particularly between their fingerprints. Those similarity measures and distance metrics can be used e.g. in searching, clustering, dimentionality reduction, kNN classification, and more."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3foPcTz1YCWS"
-   },
+   "metadata": {},
    "source": [
-    "In general, we can divide similarity metrics into two groups:\n",
-    " - those working on the vectorized molecules, which can be further divided based on the type of input:\n",
-    "     - binary data,\n",
-    "     - count (non-binary) data.\n",
-    " - those working on RDKit ``Mol`` objects.\n",
+    "## Similarities and metrics overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In general, we can divide those measures into two groups, depending on their input:\n",
+    "1. Working on molecular fingerprints (vectorized molecules). There are specific metrics for binary and count fingerprints.\n",
+    "2. Using molecules (RDKit ``Mol`` objects) directly.\n",
     "\n",
-    "Additionally, every metric is also implemented in a bulk form, allowing matrices to be passed as input.\n",
-    "Every similarity has its corresponding distance, which is usually equal to $1 - similarity$. \n",
-    "However, there are some exceptions (see next section)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Metrics overview"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Scikit-Fingerprints currently supports 14 different metrics."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vector-based methods can be split into two groups. The first considers only \"on\" bits (1s in vector representation), and the second also takes 'off' bits (0s in vector representation) into consideration.\n",
+    "Most functions are naturally defined as similarities - the higher, the more similar two molecules are. Every similarity also has a corresponding distance function implemented, usually equal to `1 - similarity`.\n",
     "\n",
-    "Keep in mind that metrics use a slightly different naming convention. If a similarity function takes arguments\n",
-    "$x$ and $y$, then inside the formula:\n",
+    "Additionally, for batch computation, e.g. pairwise similarity measurements, every metric also has a bulk function, which works on whole matrices (or lists of molecules)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fingerprint similarities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarities and distances working on fingerprint vectors can be defined for binary or count fingerprints. Most similarities, however, can only be defined for binary fingerprints. This distinction is visible in function names, e.g. `tanimoto_binary_similarity` vs `tanimoto_count_similarity`. Most similarity functions have bounded value range, typically $[0, 1]$.\n",
+    "\n",
+    "There are two major groups of similarities:\n",
+    "- only considering \"on\" bits, i.e. 1s in vector representations\n",
+    "- including both \"off\" and \"on\" bits\n",
+    "\n",
+    "For two binary vectors `x` and `y`, we can define four values, which are used to define metrics:\n",
     "\n",
     "  - $a$ – $|x \\cap y|$, the number of common \"on\" bits\n",
     "  - $b$ – the number of positions where $x$ is 1 and $y$ is 0\n",
     "  - $c$ – the number of positions where $x$ is 0 and $y$ is 1\n",
-    "  - $d$ – the number of positions where both are 0\n",
+    "  - $d$ – the number of positions where both are 0, the number of common \"off\" bits\n",
     "\n",
-    "Let's see a couple of examples.\n",
+    "We can also mark $|x|$ as total number of \"on\" bits (1s) in the $x$ vector.\n",
     "\n",
-    "**Both \"on\" and \"off\" bits**:\n",
+    "[Tanimoto binary similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_binary_similarity.html) is the most commonly used similarity measure, defined as:\n",
     "\n",
-    "- **[Rogot-Goldberg](https://doi.org/10.1016/0021-9681(66)90032-4):**  \n",
-    "  - binary similarity:\n",
+    "  $$\n",
+    "  sim(x, y) = \\frac{|x \\cap y|}{|x \\cup y|} = \\frac{|x \\cap y|}{|x| + |y| - |x \\cap y|} = \\frac{a}{a + b + c}\n",
+    "  $$\n",
+    "\n",
+    "[Tanimoto count similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.tanimoto_count_similarity.html) is an extension to count vectors, utilizing dot product as a measure of \"common bits\", and vector length instead of just sum of 1s. The larger the dot product, the more similar are two vectors. It is defined as:\n",
+    "\n",
+    "  $$\n",
+    "  sim(x, y) = \\frac{x \\cdot y}{\\|x\\|^2 + \\|y\\|^2 - x \\cdot y}\n",
+    "  $$\n",
+    "\n",
+    "\n",
+    "Both variants of Tanimoto similarity use only \"on\" bits. [Rogot-Goldberg similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.rogot_goldberg_binary_similarity.html) is an example of similarity that includes \"off\" bits information. It works only for binary vectors. It is defined as:\n",
+    "\n",
     "  $$\n",
     "  sim(x, y) = \\frac{a}{2 \\times (2a + b + c)} + \\frac{d}{2 \\times (2d + b + c)}\n",
     "  $$\n",
-    "  - Values in range \\[0, 1]\\.\n",
     "\n",
-    "**Only \"on\" bits**:\n",
-    "\n",
-    "- **[Tanimoto](https://www.tandfonline.com/doi/abs/10.1080/01621459.1971.10482356):**  \n",
-    "  - binary similarity:\n",
-    "  $$\n",
-    "  sim(a, b) = \\frac{|a \\cap b|}{|a \\cup b|} = \\frac{|a \\cap b|}{|a| + |b| - |a \\cap b|}\n",
-    "  $$\n",
-    "\n",
-    "  - count similarity:\n",
-    "  $$\n",
-    "  sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}\n",
-    "  $$\n",
-    "\n",
-    "  - Values in range \\[0, 1]\\.\n"
+    "Tanimoto similarity in both versions and Rogot-Goldberg similarity have values in range $[0, 1]$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code section here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Operating on molecules**:\n",
-    "\n",
-    " - [Fraggle](https://raw.github.com/rdkit/UGM_2013/master/Presentations/Hussain.Fraggle.pdf):\n",
-    "   - uses fragmentation algorithm (ring cut in this case) to split the **query molecule** at acyclic and ring bonds,\n",
-    "   - fragments are compared to the **reference molecule** using [Tversky similarity](https://en.wikipedia.org/wiki/Tversky_index) (α=0.95,\n",
-    "    β=0.05),\n",
-    "   - fragments with **Tversky similarity** above defined threshold are used for calculating Tanimoto similarity with reference molecule,\n",
-    "   - values in range $[0, 1]$\n",
-    " - [MCS](https://doi.org/10.1007/s10822-015-9872-1) (Maximum Common Similarity):\n",
-    "   - uses [FMCS algorithm](https://doi.org/10.1186/1758-2946-5-S1-O6) to measure overlap of two molecules,\n",
-    "   - penalizes difference in number of atoms between molecules,\n",
-    "   - values in range $[0, 1]$,\n",
-    "   - formula:\n",
-    "   $$\n",
-    "   sim(a, b) = \\frac{a \\cdot b}{\\|a\\|^2 + \\|b\\|^2 - a \\cdot b}\n",
-    "   $$"
+    "### Molecule similarities"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "TK4EsPk0YCWS"
-   },
+   "metadata": {},
    "source": [
-    "In this tutorial, we'll use Tanimoto and Fraggle metrics as examples."
+    "Some similarities include molecule structure directly in their calculation. Those can be sometimes more flexible, as they don't lose any information during the fingerprint calculation step.\n",
+    "\n",
+    "[Fraggle similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.fraggle_similarity.html) is designed to be less sensitive to small changes in the middle of molecule, compared to fingerprint-based measures. It looks more on the \"overall shape similarity\" of molecules. Its calculation consists of a few steps:\n",
+    "- fragment molecule into \"interesting\" substructures by acyclic and ring cuts, leaving only “large” parts of a molecule (>60%)\n",
+    "- compare fragments with Tversky similarity, keep only appropriately similar ones\n",
+    "- compure [RDKit fingerprints](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.fingerprints.RDKitFingerprint.html) with path length 5, compare with Tanimoto similarity\n",
+    "- largest Tanimoto similarity is the Fraggle similarity value\n",
+    "\n",
+    "This measure is asymmetric, i.e. `sim(mol_a, mol_b)` can be potentially quite different from `sim(mol_b, mol_a)`. Its value range is $[0, 1]$.\n",
+    "\n",
+    "[Maximum Common Substructure (MCS) similarity](https://scikit-fingerprints.github.io/scikit-fingerprints/modules/generated/skfp.distances.mcs_similarity.html) checks the size of the maximum common substructure (MCS) between two molecules as their structural overlap, with the formula:\n",
+    "\n",
+    "$$\n",
+    "sim(mol_a, mol_b) = \\frac{numAtoms(MCS(mol_a, mol_b))}{numAtoms(mol_a) + numAtoms(mol_b) - numAtoms(MCS(mol_a, mol_b))}\n",
+    "$$\n",
+    "\n",
+    "It also penalizes difference in molecule sizes. Its value range is $[0, 1]$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code section here"
    ]
   },
   {
@@ -1170,7 +1183,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1184,9 +1197,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
