--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -87,12 +87,226 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see some code examples of Tanimoto similarity usage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can pass the input data as either NumPy or CSR sparse arrays"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code section here"
+    "import numpy as np\n",
+    "from scipy.sparse import csr_array\n",
+    "\n",
+    "vec_a = [1, 0, 0]\n",
+    "vec_b = [0, 1, 1]\n",
+    "\n",
+    "vec_a_numpy = np.array(vec_a)\n",
+    "vec_b_numpy = np.array(vec_b)\n",
+    "\n",
+    "vec_a_sparse = csr_array([vec_a])\n",
+    "vec_b_sparse = csr_array([vec_b])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The distance function will yield the same result, no matter the format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skfp.distances.tanimoto import tanimoto_binary_distance, tanimoto_binary_similarity\n",
+    "\n",
+    "binary_sim_numpy = tanimoto_binary_similarity(vec_a_numpy, vec_b_numpy)\n",
+    "binary_dist_numpy = tanimoto_binary_distance(vec_a_numpy, vec_b_numpy)\n",
+    "\n",
+    "binary_sim_sparse = tanimoto_binary_similarity(vec_a_sparse, vec_b_sparse)\n",
+    "binary_dist_sparse = tanimoto_binary_distance(vec_a_sparse, vec_b_sparse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All \"on\" bits are in different positions. We expect the Tanimoto similarity to be equal to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(binary_sim_numpy == binary_sim_sparse == 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus, the distance should be equal to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(binary_dist_numpy == binary_dist_sparse == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the distance should be equal to $1 - similarity$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(binary_dist_numpy == 1 - binary_sim_numpy)\n",
+    "print(binary_dist_sparse == 1 - binary_sim_sparse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count variants work exactly the same way as binary ones."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse import csr_array\n",
+    "\n",
+    "from skfp.distances.tanimoto import tanimoto_count_distance, tanimoto_count_similarity\n",
+    "\n",
+    "vec_a = [2, 3, 4, 0]\n",
+    "vec_b = [2, 3, 4, 2]\n",
+    "\n",
+    "vec_a_numpy = np.array(vec_a)\n",
+    "vec_b_numpy = np.array(vec_b)\n",
+    "\n",
+    "vec_a_sparse = csr_array([vec_a])\n",
+    "vec_b_sparse = csr_array([vec_b])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_sim_numpy = tanimoto_count_similarity(vec_a_numpy, vec_b_numpy)\n",
+    "count_dist_numpy = tanimoto_count_distance(vec_a_numpy, vec_b_numpy)\n",
+    "\n",
+    "count_sim_sparse = tanimoto_count_similarity(vec_a_sparse, vec_b_sparse)\n",
+    "count_dist_sparse = tanimoto_count_distance(vec_a_sparse, vec_b_sparse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_sim_numpy == count_sim_sparse == 0.8787878787878788)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_dist_numpy == count_dist_sparse == 0.12121212121212122)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count_dist_numpy == 1 - count_sim_numpy)\n",
+    "print(count_dist_sparse == 1 - count_sim_sparse)"
    ]
   },
   {
@@ -126,280 +340,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# code section here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "qTHTNRQTYCWS"
-   },
-   "source": [
-    "## Binary similarity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "cUo6lY2nYCWS"
-   },
-   "source": [
-    "We can pass the input data as either NumPy or CSR sparse arrays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {
-    "id": "9R7j30tJYCWT"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.sparse import csr_array\n",
-    "\n",
-    "vec_a = [1, 0, 0]\n",
-    "vec_b = [0, 1, 1]\n",
-    "\n",
-    "vec_a_numpy = np.array(vec_a)\n",
-    "vec_b_numpy = np.array(vec_b)\n",
-    "\n",
-    "vec_a_sparse = csr_array([vec_a])\n",
-    "vec_b_sparse = csr_array([vec_b])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The distance function will yield the same result, no matter the format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {
-    "id": "SOdaBTHFYCWU"
-   },
-   "outputs": [],
-   "source": [
-    "from skfp.distances.tanimoto import tanimoto_binary_distance, tanimoto_binary_similarity\n",
-    "\n",
-    "binary_sim_numpy = tanimoto_binary_similarity(vec_a_numpy, vec_b_numpy)\n",
-    "binary_dist_numpy = tanimoto_binary_distance(vec_a_numpy, vec_b_numpy)\n",
-    "\n",
-    "binary_sim_sparse = tanimoto_binary_similarity(vec_a_sparse, vec_b_sparse)\n",
-    "binary_dist_sparse = tanimoto_binary_distance(vec_a_sparse, vec_b_sparse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All \"on\" bits are in different positions. We expect the Tanimoto similarity to be equal to 0."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {
-    "id": "bFd5FjwEYCWU"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(binary_sim_numpy == binary_sim_sparse == 0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Thus, the distance should be equal to 1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {
-    "id": "dUiqmUI7YCWU"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(binary_dist_numpy == binary_dist_sparse == 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And the distance should be equal to $1 - similarity$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {
-    "id": "0XfoB7HpYCWU"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(binary_dist_numpy == 1 - binary_sim_numpy)\n",
-    "print(binary_dist_sparse == 1 - binary_sim_sparse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zxtlkrdlYCWU"
-   },
-   "source": [
-    "## Count similarity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Count variants work exactly the same way as binary ones."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 197,
-   "metadata": {
-    "id": "-BLsDSKCYCWV"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.sparse import csr_array\n",
-    "\n",
-    "from skfp.distances.tanimoto import tanimoto_count_distance, tanimoto_count_similarity\n",
-    "\n",
-    "vec_a = [2, 3, 4, 0]\n",
-    "vec_b = [2, 3, 4, 2]\n",
-    "\n",
-    "vec_a_numpy = np.array(vec_a)\n",
-    "vec_b_numpy = np.array(vec_b)\n",
-    "\n",
-    "vec_a_sparse = csr_array([vec_a])\n",
-    "vec_b_sparse = csr_array([vec_b])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 198,
-   "metadata": {
-    "id": "OXHPqhSKYCWV"
-   },
-   "outputs": [],
-   "source": [
-    "count_sim_numpy = tanimoto_count_similarity(vec_a_numpy, vec_b_numpy)\n",
-    "count_dist_numpy = tanimoto_count_distance(vec_a_numpy, vec_b_numpy)\n",
-    "\n",
-    "count_sim_sparse = tanimoto_count_similarity(vec_a_sparse, vec_b_sparse)\n",
-    "count_dist_sparse = tanimoto_count_distance(vec_a_sparse, vec_b_sparse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {
-    "id": "z5rOV0rOYCWV"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(count_sim_numpy == count_sim_sparse == 0.8787878787878788)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {
-    "id": "fzuli8pqYCWV"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(count_dist_numpy == count_dist_sparse == 0.12121212121212122)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {
-    "id": "YicTN5KbYCWV"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(count_dist_numpy == 1 - count_sim_numpy)\n",
-    "print(count_dist_sparse == 1 - count_sim_sparse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "L-Cjf6qdYCWV"
-   },
-   "source": [
-    "## Structural similarity"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -408,10 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {
-    "id": "eURZtPeTYCWV"
-   },
+   "execution_count": 282,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from rdkit.Chem import MolFromSmiles\n",
@@ -429,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 283,
    "metadata": {
     "id": "X5VDP2qTYCWV"
    },
@@ -450,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 284,
    "metadata": {
     "id": "OQNn3USQYCWW"
    },
@@ -498,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +445,7 @@
        "0.6666666666666667"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 286,
    "metadata": {
     "id": "dU1_4arDlidQ"
    },
@@ -542,7 +480,7 @@
        "array([[0.66666667]])"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 288,
    "metadata": {
     "id": "fUtOB4EAYCWW"
    },
@@ -632,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 289,
    "metadata": {
     "id": "g6JvBvgzYCWW"
    },
@@ -646,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 290,
    "metadata": {
     "id": "ElBquJpaYCWX"
    },
@@ -658,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 291,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -675,7 +613,7 @@
        "       [0.66666667, 0.66666667, 1.        ]])"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 292,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -703,7 +641,7 @@
        "       [0.33333333, 0.33333333, 0.        ]])"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 293,
    "metadata": {
     "id": "yVqLYs2mcHL9"
    },
@@ -749,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 294,
    "metadata": {
     "id": "4OVmlVFldBjj"
    },
@@ -777,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 295,
    "metadata": {
     "id": "EgYpnj7kdGlH"
    },
@@ -791,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 296,
    "metadata": {
     "id": "d4Be-8rodKXe"
    },
@@ -803,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 297,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -820,7 +758,7 @@
        "       [0.89655172, 0.71428571, 0.20895522]])"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 298,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -848,7 +786,7 @@
        "       [0.10344828, 0.28571429, 0.79104478]])"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 299,
    "metadata": {
     "id": "szBjBVHUdSUD"
    },
@@ -887,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 300,
    "metadata": {
     "id": "Jt0wjKx7djie"
    },
@@ -904,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 301,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -921,7 +859,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 302,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -960,7 +898,7 @@
        "       [1., 0., 1.]])"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 303,
    "metadata": {
     "id": "H-wTQQymf4i8"
    },
@@ -1008,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 304,
    "metadata": {
     "id": "U7UsgXGXgaod"
    },
@@ -1019,7 +957,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=uint32)"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,6 +972,15 @@
     "    \"C1CC1N2C=C(C(=O)C3=CC(=C(C=C32)N4CCNCC4)F)C(=O)O\",  # Ciprofloxacin\n",
     "    \"CC(=O)CC(C1=CC=CC=C1)C2=C(C3=CC=CC=C3OC2=O)O\",  # Warfarin\n",
     "    \"CC(=O)Nc1ccc(O)cc1\",  # Paracetamol\n",
+    "    \"CCC[C@@H](C(=O)C(=O)NC1CC1)NC(=O)[C@@H]2[C@H]3CCC[C@H]\"  # Telaprevir\n",
+    "    \"3CN2C(=O)[C@H](C(C)(C)C)NC(=O)[C@H](C4CCCCC4)NC(=O)c5cnccn5\",  # Atorvastatin\n",
+    "    \"O=C(O)C[C@H](O)C[C@H](O)CCn2c(c(c(c2c1ccc(F)cc1)c3ccccc3)C(=O)Nc4ccccc4)C(C)C\",  # Telmisartan\n",
+    "    \"CS(=O)(=O)CCNCc1ccc(o1)c2ccc3c(c2)c(ncn3)Nc4ccc(c(c4)Cl)OCc5cccc(c5)F\",  # Lapatinib\n",
+    "    \"O=C(N)C(C)(C)CNC(=O)[C@H](C(C)C)C[C@H](O)[C@@H](N)C[C@@H](C(C)C)Cc1cc(OCCCOC)c(OC)cc1\",  # Aliskiren\n",
+    "    \"C=12CCC=3C=C(C=C(C3[C@H](C1N=CC(=C2)Br)C4CCN(CC4)C(=O)CC5CCN(CC5)C(N)=O)Br)Cl\",  # Ergotamin\n",
+    "    r\"CN1CCN(CC1)/N=C/c2c(O)c3c5C(=O)[C@@]4(C)O/C=C/[C@H](OC)[C@@H](C)[C@@H](OC(C)=O)[C@H](C)[C@H](O)[C@H](C)[C@@H](O)[C@@H](C)\\C=C\\C=C(\\C)C(=O)Nc2c(O)c3c(O)c(C)c5O4\",  # Rinfampin\n",
+    "    \"S(c1cc(c(O)c(c1)C(C)(C)C)C(C)(C)C)C(Sc2cc(c(O)c(c2)C(C)(C)C)C(C)(C)C)(C)C\",  # Probucol\n",
+    "    \"O([C@@H]2[C@@H](O)[C@H](O[C@H]1O[C@H](CN)[C@@H](O)[C@H](O)[C@H]1O)[C@@H](N)C[C@H]2N)[C@H]3O[C@@H]([C@@H](O)[C@H](N)[C@H]3O)CO\",  # Kanamycin\n",
     "]\n",
     "\n",
     "fp = ECFPFingerprint(count=True)\n",
@@ -1058,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 305,
    "metadata": {
     "id": "8YbFKfihgUKO"
    },
@@ -1079,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 306,
    "metadata": {
     "id": "K0ifGaV5hDNU"
    },
@@ -1097,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 307,
    "metadata": {
     "id": "eQpVZwnUiV7M"
    },
@@ -1125,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 308,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1138,7 +1085,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.97 ms ± 144 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "14.4 ms ± 2.03 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -1148,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 309,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1161,8 +1108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 6.16 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "5.13 ms ± 3.41 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "675 µs ± 64.3 µs per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
